src/objects/Project_Packet_SOSP__c.object
<CustomObject>
    <fields>
        <fullName>Project_Zone__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Zone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Project_Zone_SOSP__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Zone_SOSP__c</referenceTo>
        <relationshipLabel>Project Packets</relationshipLabel>
        <relationshipName>Project_Packets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project_SOSP__c</referenceTo>
        <relationshipLabel>Project Packets</relationshipLabel>
        <relationshipName>Project_Packets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>Project_Zone__r.Zone_Name__c</formula>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>Project Packet</label>
    <nameField>
        <label>Project Packet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Packets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>